# cortex-app

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PRODUCT.md  README.md  biome.json  package.json  tsconfig.desktop.json  tsconfig.json  vitest.workspace.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-plugin-api.yml  react-doctor.yml  release.yml
apps/Cortex/: AGENTS.md  eslint.config.js  package.json  tsconfig.json
apps/desktop/: CLAUDE.md  components.json  package.json  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  q  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: atomic_fs.rs  dock_menu.rs  lib.rs
apps/desktop/src-tauri/src/commands/: app_update.rs  auth.rs  device.rs  devices.rs  dialog.rs  document_export.rs  document_import.rs  font.rs  fs.rs  keychain.rs  members.rs  menu.rs  mod.rs  registry.rs  remote_vault.rs  subscription.rs  sync.rs  vault.rs  watcher.rs  window.rs
apps/desktop/src-tauri/src/device/: mod.rs
apps/desktop/src-tauri/src/keychain/: mod.rs
apps/desktop/src-tauri/src/sync/: auth.rs  conflict.rs  crypto.rs  db.rs  downloader.rs  engine.rs  http.rs  ignore.rs  initial.rs  merge.rs  mod.rs  paths.rs  queue.rs  reconcile.rs  sse.rs  state.rs  uploader.rs
docs/: README.md
scripts/: check-workspace-boundaries.ts  generate-tauri-updater-manifest.ts  run-biome-target.mjs  run-vitest-target.mjs
(+479 files in other folders)
