[package]
name = "Cortex"
version = "0.1.1"
description = "Cortex Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "cortex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
url = "2"
notify = "7"
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
font-kit = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
gethostname = "0.5"
aes-gcm = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
jsonwebtoken = "9"
base64 = "0.22"
dmp = "0.2"
tokio-util = "0.7"
argon2 = "0.5"
zip = "2"
atomic-write-file = "0.3"
lopdf = { version = "0.42", default-features = false }
ironpress = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSString"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
